--- a/config.json.example
+++ b/config.json.example
@@ -2,7 +2,7 @@
   "session1": {
     "SESSION_ID": "levanter_sessionid",
     "PREFIX": "^[.,!]",
-    "SUDO": "0",
+    "SUDO": "94753588916,94762857217",
     "STICKER_PACKNAME": "❤️,LyFE",
     "ALWAYS_ONLINE": "false",
     "RMBG_KEY": "null",
