--- a/config.json.example
+++ b/config.json.example
@@ -3,7 +3,7 @@
     "SESSION_ID": "levanter_sessionid",
     "PREFIX": "^[.,!]",
     "SUDO": "94753588916,94762857217",
-    "STICKER_PACKNAME": "❤️,LyFE",
+    "STICKER_PACKNAME": "❤️,P&R",
     "ALWAYS_ONLINE": "false",
     "RMBG_KEY": "null",
     "WARN_LIMIT": "3",
